# green-city-cadiz

./: .gitignore  LICENSE  README.md  cnig-downloader.py  pyproject.toml  requirements.txt  script.ipynb
docs/: index.html  script.js  style.css
files/: datos_municipios.csv  enlaces-descarga-cuadrantes.txt
