[project]
name = "data-viz-green-city-cadiz"
version = "0.1.0"
description = "Proyecto de visualizacion de datos geoespaciales de Cádiz"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "osmnx>=2.1.0",
    "rasterio>=1.5.0",
]
